k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: chat-demo-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 3007 
  selector:
    app: client
