k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: server-service
  namespace: chat-demo-app 
spec: 
  type: ClusterIP
  ports: 
  - port: 5000 
    targetPort: 5000 
  selector: 
    app: server
